[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-energy-openenv"
version = "1.0.0"
description = "Smart Energy Distribution OpenEnv for Meta x Hugging Face Hackathon"
authors = [
  { name = "Hackathon User" }
]
requires-python = ">=3.9"

dependencies = [
  "fastapi",
  "uvicorn",
  "pydantic",
  "numpy"
]