[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-energy-openenv"
version = "1.0.0"
description = "Smart Energy OpenEnv Hackathon Submission"
requires-python = ">=3.9"

dependencies = [
  "fastapi",
  "uvicorn",
  "pydantic",
  "numpy",
  "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"
